<resources>
    <string name="app_name">Athletics Tracker</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Acceder a la plataforma</string>
    <string name="action_sign_in_short">Accede</string>
    <string name="welcome">"Bienvenido a Athletics Tracker!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">La contraseña debe tener más de 5 caracteres</string>
    <string name="login_failed">"Error al acceder"</string>
    <string name="iniciar">INICIAR</string>
    <string name="reiniciar">REINICIAR</string>
    <string name="prueba_activity_crono">Prueba Activity Crono</string>
    <string name="_400_m">400 m</string>
    <string name="_0_00_0">0:00:0</string>
    <string name="stop">STOP</string>
    <string name="hint_email">Introduce aquí tu mail...</string>
    <string name="hint_contrasenia">Introduce aquí tu contraseña...</string>
    <string name="registrar">REGISTRAR</string>
    <string name="acceder">ACCEDER</string>
    <string name="bienvenido">¡Bienvenidx!</string>
    <string name="btnBienvenida_text">CONTINUA CON EL REGISTRO</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellido</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="sexo">Sexo</string>
    <string name="hint_fechanacimiento">Formato (DD-MM-AAAA)</string>
    <string name="hint_apellidos">Aquí tus apellidos</string>
    <string name="hint_nombre">Pon aquí tu nombre</string>
    <string name="titulo_registro2">¿LISTX PARA HACER HISTORIA?</string>
    <string name="pregunta_rol">¿Eres atleta o entrenador/a?</string>
    <string name="titulo_registro3">¡Elige tu club y no pierdas ni un segundo más!</string>
    <string name="seleccion_club">Selecciona tu club</string>
    <string name="registrar_club">¿NO ENCUENTRAS TU CLUB? ¡Registralo aquí!</string>
    <string name="titulo_club">¡Corre (nunca mejor dicho) y registra los tiempazos de tu club!</string>
    <string name="olvidaste_contrasenia">¿Olvidaste tu contraseña?</string>
    <string name="registros_personales">registros personales</string>
    <string name="iniciar_prueba">Iniciar prueba</string>
    <string name="ver_club">ver club</string>
    <string name="mensaje_error_spinner_seleccion_prueba">Selecciona una prueba por favor</string>
    <string name="mensaje_error_edit_text_localidad_prueba">Introduzca una localidad, por favor</string>
    <string name="mensaje_error_calles_vacias_seleccion_atletas">Todas las calles están vacías</string>
    <string name="titulo_alert_dialog_cerrar_sesion">Cerrar sesión</string>
    <string name="mensaje_titulo_alert_dialog_cerrar_sesion">¿Estás seguro de que quieres cerrar sesión?</string>
    <string name="cancelar">Cancelar</string>
    <string name="titulo_alert_dialog_enviar_mensaje_verificacion">Envíado mensaje de verificación</string>
    <string name="mensaje_alert_dialog_enviar_mensaje_verificacion">"Se ha enviado un mensaje de verificación a la siguiente dirección de correo: "</string>
    <string name="cerrar">CERRAR</string>
    <string name="titulo_alert_dialog_reestablecer_contrasenia">Reestablecer contraseña</string>
    <string name="mensaje_alert_dialog_reestablecer_contrasenia">¿Estás seguro de que deseas reestablecer tu contraseña? Pulsa OK para confirmarlo</string>
    <string name="ok">OK</string>
    <string name="mensaje_enviado_mail">Mail enviado.Revisa tu bandeja de entrada</string>
    <string name="mensaje_error_mail">Introduce un mail, por favor</string>
    <string name="mensaje_error_contrasenia">Introduce una contraseña, por favor</string>
    <string name="registro_exito">Registro completado con éxito</string>
    <string name="mail_duplicado">Este mail ya se encuentra registrado en nuestro servidor</string>
    <string name="mensaje_error_nombre_registro">El campo Nombre no puede estar vacío.</string>
    <string name="mensaje_error_apellidos_registro">El campo Apellidos no puede estar vacío</string>
    <string name="mensaje_error_fecha_nacimiento_registro">Debe seleccionar una fecha de nacimiento</string>
    <string name="mensaje_error_fecha_superior_actual">Fecha de nacimiento debe ser anterior a la fecha actual...</string>
    <string name="mensaje_error_club_no_seleccionado_spinner_registro">Selecciona un club, por favor</string>
    <string name="mensaje_registro_club_exito">Club registrado con éxito</string>
    <string name="mensaje_error_club_duplicado">Ese club ya existe</string>
    <string name="mensaje_error_comparador_numero_atletas">Tiene que seleccionar 2 atletas</string>
    <string name="mensaje_falta_registro_personales">Aún no tienes registros personales</string>
    <string name="introduce_nuevo_mail">"Introduce tu nuevo mail: "</string>
    <string name="introduce_nueva_contrasenia">"Introduce tu nueva contraseña: "</string>
    <string name="btn_cambiar_datos">Cambiar datos</string>
    <string name="titulo_bienvenida_activity">¡Completa tu registro!</string>
    <string name="comenzar">Comenzar</string>
    <string name="club_1">Club 1</string>
    <string name="atleta_1">Atleta 1</string>
    <string name="club_2">Club 2</string>
    <string name="atleta_2">Atleta 2</string>
    <string name="edad">EDAD</string>
    <string name="actualizar_datos_usuario">ACTUALIZAR DATOS USUARIO</string>
    <string name="verificar_mail">Verifica tu dirección mail</string>
    <string name="prueba">Prueba</string>
    <string name="localidad">Localidad</string>
    <string name="pasar_seleccion_atletas">PASAR A SELECCIONAR ATLETAS</string>
    <string name="iniciar_reiniciar_convocatoria">INICIAR/REINICIAR CONVOCATORIA</string>
    <string name="comenzar_prueba">COMENZAR PRUEBA</string>
    <string name="carrera_finalizada">¡Carrera finalizada!</string>
    <string name="mensaje_carrera_finalizada">¿Qué desea hacer?</string>
    <string name="guardar">Guardar</string>
    <string name="volver_iniciar">Volver al inicio</string>
    <string name="campos_vacios">Campos no pueden estar vacíos</string>
    <string name="error_iniciar_sesion">Error en el inicio de sesión</string>
    <string name="mensaje_iniciar_sesion">Ha habido un error al iniciar sesión con este mail y contraseña</string>
    <string name="aceptar">Aceptar</string>
    <string name="vCorredores">vCorredores</string>
    <string name="usuario">usuario</string>
    <string name="espacio">" "</string>
    <string name="clubes">clubes</string>
    <string name="lpruebas">lPruebas</string>
    <string name="users">users</string>
    <string name="registros">registros</string>
    <string name="club">club</string>
    <string name="webAdidas">https://www.adidas.es/</string>
    <string name="mailUsuario">mailUsuario</string>
    <string name="contrasenia">contrasenia</string>
    <string name="atleta">Atleta</string>
    <string name="entrenador">Entrenador</string>
    <string name="la_ciudad_del_mejor_club_de_la_historia">La ciudad del mejor club de la historia...</string>
    <string name="mail_del_club">Mail del club</string>
    <string name="el_mail_de_tu_club">El mail de tu club</string>
    <string name="corredor">Corredor</string>
    <string name="tiempo">Tiempo</string>
    <string name="corredores">Corredores</string>
    <string name="_0">0</string>
    <string name="fecha">Fecha</string>
    <string name="fecha_y_hora">Fecha y hora</string>
    <string name="mejor_marca">Mejor Marca</string>
    <string name="tipo_de_prueba">Tipo de prueba</string>
    <string name="anios">" años"</string>
    <string name="sr">S/R</string>
    <string name="invalid_mail_regex">Introduce una dirección de mail válida</string>
</resources>