<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".registro.RegistroClubActivity">

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_club"
        android:textColor="@color/colorPrimaryVariant"
        android:textSize="@dimen/auth_texts"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textColor="@color/colorOnSecondary"
        android:textSize="@dimen/register_layout"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_nombre"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/textViewLocalidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/localidad"
        android:textColor="@color/colorOnSecondary"
        android:textSize="@dimen/register_layout"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextLocalidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/la_ciudad_del_mejor_club_de_la_historia"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/textViewMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mail_del_club"
        android:textColor="@color/colorOnSecondary"
        android:textSize="@dimen/register_layout"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextFechaPrueba"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/el_mail_de_tu_club"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/btnSiguienteClub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/siguiente" />

</LinearLayout>