<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".registro.Registro2Activity">

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_registro2"
        android:textColor="@color/colorOnSecondary"
        android:textSize="@dimen/auth_texts"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textColor="@color/colorSecondaryVariant"
        android:textSize="@dimen/register_layout"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_nombre"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/textViewApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apellidos"
        android:textColor="@color/colorSecondaryVariant"
        android:textSize="@dimen/register_layout"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextLocalidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_apellidos"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/textViewMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fecha_nacimiento"
        android:textColor="@color/colorSecondaryVariant"
        android:textSize="@dimen/register_layout"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextFechaPrueba"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/hint_fechanacimiento"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/textViewSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sexo"
        android:textColor="@color/colorSecondaryVariant"
        android:textSize="@dimen/register_layout"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinnerSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/spinnersexo"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/textViewRol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pregunta_rol"
        android:textColor="@color/colorSecondaryVariant"
        android:textSize="@dimen/register_layout"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinnerRol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/spinnerrol"
        android:minHeight="48dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/btnSiguienteClub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/siguiente" />
</LinearLayout>