<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AuthActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/at_logo250"
        android:layout_weight="2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="3">

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_email"
            android:textColor="@color/design_default_color_primary"
            android:textSize="@dimen/auth_texts"
            android:layout_marginHorizontal="5dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="12"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:layout_marginHorizontal="5dp"
            android:textSize="@dimen/auth_texts" />

        <TextView
            android:id="@+id/textViewContrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_password"
            android:textColor="@color/design_default_color_primary"
            android:textSize="@dimen/auth_texts"
            android:layout_marginHorizontal="5dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTextContrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="12"
            android:hint="@string/hint_contrasenia"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:layout_marginHorizontal="5dp"
            android:textSize="@dimen/auth_texts" />
        <Button
        android:id="@+id/btnAcceder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:text="@string/acceder" />
    </LinearLayout>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="¿Aún no tienes cuenta?"
        android:gravity="end"
        android:layout_marginHorizontal="5dp"
        android:textColor="@color/design_default_color_primary"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_gravity="end"
        android:text="@string/registrar" />

</LinearLayout>