<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:theme="@style/Theme.AppCompat"
    tools:context=".gestion.ActivityAjustesUsuario">

    <TextView
        android:id="@+id/txtViewHolaAjustes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10sp"
        android:paddingBottom="20sp"
        android:text="¡Hola!"
        android:textColor="@color/colorOnSecondary"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtViewMailUsuarioAjustes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="20sp"
        android:text="¡Hola!"
        android:textColor="@color/colorPrimaryVariant"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnActualizarDatosUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/actualizar_datos_usuario"></Button>

    <Button
        android:id="@+id/btnEnviarMensajeVerificacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verificar_mail"></Button>

    <Button
        android:id="@+id/btnReestablecerContrasenia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_alert_dialog_reestablecer_contrasenia"></Button>

    <Button
        android:id="@+id/btnCerrarSesión"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/titulo_alert_dialog_cerrar_sesion"
        android:textColor="@android:color/white"></Button>


</LinearLayout>