<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Registro3Activity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/design_default_color_primary"
        android:textSize="@dimen/auth_texts"
        android:textStyle="bold"
        android:text="@string/titulo_registro3" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <TextView
        android:id="@+id/textViewSeleccionClub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seleccion_club"
        android:textSize="@dimen/register_layout"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/spinnerSeleccionClub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="350dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnRegistrarClub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/cardview_dark_background"
            android:layout_gravity="right"
            android:text="@string/registrar_club" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/siguiente" />

    </LinearLayout>


</LinearLayout>