<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.40" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.60" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/txtTipoDePruebaComp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prueba"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline30"
        app:layout_constraintStart_toStartOf="@+id/guideline29"
        app:layout_constraintTop_toTopOf="@+id/guideline31" />

    <TextView
        android:id="@+id/txtMejorMarca1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mejor_marca"
        app:layout_constraintEnd_toStartOf="@+id/guideline29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline31" />

    <TextView
        android:id="@+id/txtMejorMarca2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mejor_marca"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline30"
        app:layout_constraintTop_toTopOf="@+id/guideline31" />

    <TextView
        android:id="@+id/txtTiempoComp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_00_0"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline29"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline33" />

    <TextView
        android:id="@+id/txtTiempoComp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_00_0"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline30"
        app:layout_constraintTop_toTopOf="@+id/guideline33" />
</androidx.constraintlayout.widget.ConstraintLayout>